# ha-desky-ble

./: .gitignore  LICENSE  README.md  pyproject.toml
blueprints/: standing_desk_routine.yaml
custom_components/desky/: __init__.py  ble_client.py  button.py  config_flow.py  const.py  coordinator.py  cover.py  icons.json  manifest.json  number.py  protocol.py  select.py  sensor.py  strings.json  switch.py
custom_components/desky/translations/: en.json
desky_ble/: README.md  pyproject.toml
desky_ble/src/desky_ble/: __init__.py  ble_client.py  protocol.py
tests/: conftest.py  test_ble_client_settings.py  test_protocol.py  test_restore_settings.py
