[project]
name = "desky-ha"
version = "1.0.0"
description = "Home Assistant integration for Desky Standing Desk (BLE)"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
