[project]
name = "ha-desky-ble"
version = "1.0.0"
description = "Home Assistant integration for Desky Standing Desk (BLE)"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.38.1",
    "homeassistant>=2024.12.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportIncompatibleVariableOverride = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportExplicitAny = false
