[project]
name = "ha-desky-ble"
version = "0.1.0"
description = "Home Assistant integration for Desky Standing Desk (BLE)"
requires-python = ">=3.12"
dependencies = [
    "bleak>=2.1.1",
    "bleak-retry-connector>=4.5.0",
]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.38.1",
    "homeassistant<=2026.2.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportIncompatibleVariableOverride = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportExplicitAny = false
