[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desky-ble"
version = "0.1.3"
description = "Unofficial Python library for local Bluetooth LE control of Desky® Standing Desks."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "vakintosh"}
]
keywords = ["home-assistant", "bluetooth", "ble", "desky", "standing-desk", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=2.1.1",
    "bleak-retry-connector>=4.4.0",
]

[project.urls]
Homepage = "https://github.com/vakintosh/ha-desky-ble"
Bug-Tracker = "https://github.com/vakintosh/ha-desky-ble/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/desky_ble"]